# svgink.py

./: README.md  pyproject.toml
examples/: animate.py  animate_transform.py  grid3.py  grid4.py  layers.py  text.py  transform.py
reflect/: _lib_element.py
svgink/: __init__.py  elements.py  layer.py
tests/: test_elements.py  test_examples.py
