[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "svgink"
dist-name = "svgink.py"
license = "MIT"
author = ""
author-email = ""
home-page = "https://github.com/ThibaultLejemble/svgink"
description-file = "README.md"
requires-python = ">=3.7"
keywords = "svg,drawing,vector,Inkscape"
requires = []

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.flit.metadata.requires-extra]
dev = [
    "isort",
    "mypy",
    "pytest",
]

[tool.isort]
profile = "django"
lines_after_imports = 2
